10-07-2014 5.0.69
- Updated Portugese-Brazil translation
- Fixed not working if conditions in e-mail templates
- Invalid calendar state that did not select own calendar on load
- Urlencode phone numbers in callto links

03-07-2014 5.0.68
- Size mismatch on debian repos

03-07-2014 5.0.67
- Broken message dialog in ticket system

02-07-2014 5.0.66
- Private events where shown in new calendar prints
- Moved file search index to separate cron job
- Ticket types will always sort by group name so groups wont show up double

12-06-2014 5.0.65
- Bug in checking user permission when sending mail

12-06-2014 5.0.64
- Forward messages that were attached fixed
- Touch parent and current folder when moving files and folders so refreshing won't sync with the filesystem. This improves performance.
- Updated Croatian translation
- Funambol bug with multiple exceptions in a recurring event fixed
- Event reminder set correctly for funambol sync
- Show expunged mail with line-through
- Skip deleted messages in ActiveSync
- Only update modified properties  on recurring orders when saving
- Don't ask to add unknown recipient if the recipient is a visible user
- CalDAV did not handle resource conflicts correctly
- Billing: three new optional invoice PDF columns.
- Calendar: fixed bug where an exception event is created twice.

04-06-2014 5.0.63
- ExportXLS error fixed
- Added div overlay to the print function so the links in the preview should not be clickable anymore
- Updated German

03-06-2014 5.0.62
- Fixed missing ExportXLS error when exporting.
- Fixed problem with address list changes. Only save them when the address list settings panel is enabled.
- Updated German and Czech language
- Added Brazilian Portugese holidays file

28-05-2014 5.0.61
- Limit file search index size to 10MB
- Send an empty reminder object in sync so reminder will be cleared on clients